# wb_parsing

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  hello.py  manage.py  pyproject.toml  requirements.txt
wb-frontend/: nginx.conf  package-lock.json  package.json  tailwind.config.js
wb-frontend/src/: App.jsx
wb_parsing/: asgi.py  settings.py  urls.py  wsgi.py
wb_parsing/products/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
wb_parsing/products/management/commands/: fetch_wb.py
wb_parsing/products/migrations/: 0001_initial.py
